--- a/wp-content/themes/simplex-electrician/sass/theme/_theme.scss
+++ b/wp-content/themes/simplex-electrician/sass/theme/_theme.scss
@@ -1,4 +1,5 @@
 // This is an empty scss file for your custom styles - Please add your super duper awesome mega design styles here
+@import "./components/global";
 @import "./components/topbar" ;
 @import "./components/navbar";
 @import "./components/carousel";
@@ -8,10 +9,9 @@
 @import "./components/cta";
 @import "./components/testimonial";
 @import "./components/pricing";
+@import "./components/fixed-button";
 @import "./components/footer";
 @import "./components/mixins";
-@import "./components/global";
-
 @import "./components/mediaQueries";
 
 
