Simplex Electric Beta 3.0

--- a/wp-content/themes/simplex-electrician/sass/theme/_theme.scss
+++ b/wp-content/themes/simplex-electrician/sass/theme/_theme.scss
@@ -13,6 +13,7 @@
 @import "./components/footer";
 @import "./components/mixins";
 @import "./components/mediaQueries";
+@import "./components/button";
 
 
 
