--- a/wp-content/themes/simplex-electrician/sass/theme/components/_fixed-button.scss
+++ b/wp-content/themes/simplex-electrician/sass/theme/components/_fixed-button.scss
@@ -1,13 +1,40 @@
+@import "./mediaQueries";
+
 #fixed-button{
     position: fixed;
-    bottom: -4px;
-    right: 10px;
-    background-color : $primary;
+    bottom: 2%;
+    right: 95px;
+    background-color : rgba(255,255,255, .2);
     color: white;
-    padding: 10px 20px;
-    border-radius: 4px;
+    height: 80px;
+    width: 80px;
+    padding: 10px 10px;
+    border-radius: 50%;
     border-color: $primary;
     z-index: 10000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @include responsive(laptop){
+        height: 60px;
+        width: 60px;
+        right: 70px;
+    }
+    a{
+        border-radius: 50%;
+        width: 60px;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        @include responsive(laptop){
+            height: 40px;
+            width: 40px;
+        }
+        i{
+            font-size: 1.2rem;
+        }
+    }
     .btn-theme:hover{
         background-color: $primary;
         color: white;
