--- a/wp-content/themes/simplex-electrician/sass/theme/components/_footer.scss
+++ b/wp-content/themes/simplex-electrician/sass/theme/components/_footer.scss
@@ -8,6 +8,10 @@
         color: white;
         .footer-left-top-section{
             margin-bottom: 30px;
+            .footer-logo{
+                width: 250px;
+                height:auto;
+            }
         }
         a{
             font-weight: 600;
@@ -29,6 +33,9 @@
             }
         }
         .footer-social{
+            display: flex;
+            justify-content: center;
+            align-items: center;
             margin-top: 20px;
             i{  margin-right: 20px;
                 font-size: 1.2rem;
