--- a/wp-content/themes/simplex-electrician/sass/theme/components/_mixins.scss
+++ b/wp-content/themes/simplex-electrician/sass/theme/components/_mixins.scss
@@ -1,1 +1,10 @@
- 
+@mixin button ($color) {
+        background: $color;
+        color: white;
+        &:hover{
+            background: white;
+            color: $primary;
+            border: 1px solid $primary;
+        }
+    
+}
