--- a/wp-content/themes/simplex-electrician/sass/theme/components/_pricing.scss
+++ b/wp-content/themes/simplex-electrician/sass/theme/components/_pricing.scss
@@ -48,8 +48,9 @@
                                 }
                             }
                         }
-                        button{
+                        .btn{
                             margin-top: auto;
+                            @include button($primary);
                         }
                         
                     }
