--- a/wp-content/themes/simplex-electrician/sass/theme/components/_topbar.scss
+++ b/wp-content/themes/simplex-electrician/sass/theme/components/_topbar.scss
@@ -53,7 +53,7 @@
                 background-color: $secondary;
                 outline: none;
                 border: none;
-                :focus{
+                &:focus{
                     outline: none;
                     box-shadow: none!important;
                 }
